tests/fixtures/invalid/tuple_int.py
# Cannot call tuple() with Int
x = tuple(1)
